<resources>
    <string name="app_name" translatable="false">Dentella</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="patient_name">Patient Name</string>
    <string name="login_account">Login account</string>
    <string name="id_number">ID number</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forgot your password?</string>
    <string name="or">or</string>
    <string name="signin_with_google">Sign in with Google</string>
    <string name="do_not_have_account">Do not have account?</string>
    <string name="create_account">Create account</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone Number</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter Your Email Address Below</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_code">Enter Code</string>
    <string name="Continue">Continue</string>
    <string name="send_code">send code again</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="hello">Hello!</string>
    <string name="welcome_back">welcome back!</string>
    <string name="search">Search</string>
    <string name="choose_speciality">Choose speciality</string>
    <string name="see_all">see all</string>
    <string name="available_doctors">Available doctors</string>
    <string name="see_info">See Info</string>
    <string name="skip">Skip</string>
    <string name="predict_disease">Predict diseases before become infected</string>
    <string name="upload_image">Upload your teeth picture.</string>
    <string name="go_to_model">Click on the arrow to see our model …</string>
    <string name="model" translatable="false">Dentella Ai model</string>"
    <string name="speciality">speciality</string>
    <string name="please_add_content">Please add content for posting</string>
    <string name="crowns">Crowns</string>
    <string name="implants">Implants</string>
    <string name="dentures">Dentures</string>
    <string name="profile">Profile</string>
    <string name="doctor_name">doctor name</string>
    <string name="doctor_procedure">doctor speciality</string>
    <string name="chat_now">chat now</string>
    <string name="available_dates">Available Dates</string>
    <string name="about">About</string>
    <string name="update_password">Update your password</string>
    <string name="article">Articles</string>
    <string name="please_add_user_name_or_password">Please add user name or password</string>
    <string name="welcome">Welcome</string>
    <string name="check_username_pass">Please check your username and password!</string>
    <string name="please_enter_article_to_post">Please enter article to post</string>
    <string name="article_date">15 min</string>
    <string name="user_name_not_valid">"This user name is not valid"</string>
    <string name="email_not_valid">This email is not valid (must be valid email)</string>
    <string name="password_not_valid">This password is not valid (must be between 8 to 15)</string>
    <string name="phone_not_valid">This phone number is not valid (must be 11 digits)</string>
    <string name="confirmation_password_not_valid">This password is not valid (must be between 8 to 15) .. or not equal confirmation password</string>
    <string name="id_not_valid">This id is not valid .. ID  should be between 5 and 10 digits</string>
    <string name="server_error">Server Error .. your data maybe incorrect</string>
    <string name="network_error">Network Error</string>
    <string name="add_card">Add Card</string>
    <string name="select_speciality">Select Your Speciality</string>
    <string name="select_your_free_date">Select your free date</string>
    <string name="time">Time</string>
    <string name="select_your_free_time">Select your free time</string>
    <string name="confirm">Confirm</string>
    <string name="choose_free_time_and_speciality">You should choose future free time , free date and your speciality</string>
    <string name="your_speciality_is">Your speciality is</string>
    <string name="your_selected_date_is">and your selected date is</string>
    <string name="at">at</string>
    <string name="cleaning">Cleaning</string>
    <string name="filling">Filling</string>
    <string name="extraction">Extraction</string>
    <string name="response_return_successfully">Response return successfully</string>
    <string name="error_when_returning_response">Error when returning response</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="my_account">My Account</string>
    <string name="location">Location</string>
    <string name="about_setting">About</string>
    <string name="write_user_name">Write your user name</string>
    <string name="write_about">Write something about you..</string>
    <string name="write_university">Write your current university</string>
    <string name="write_phone_number">Write your phone number</string>
    <string name="write_email">Write your email</string>
    <string name="error_when_changing_password">Error..your new password is less than 8 digits or
        you add the same password in new password field</string>
    <string name="error_when_changing_old_password">Error when changing password .. please add your old password correctly </string>
    <string name="change_password_successfully">You have changed password successfully</string>
    <string name="old_password">Old Password</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="setting">Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="articles">Articles</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="want_to_login_again">Your session is expired , please login again</string>
    <string name="cannot_send_data">An error occurred .. cannot send data to server .. you add invalid data</string>
    <string name="chat_ai" translatable="false">Chat Ai</string>
    <string name="write_article">Write an article</string>
    <string name="write_post">Write a post</string>
    <string name="write_here">Write here</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_specialty">Unknown Speciality</string>
    <string name="orthodontic">Orthodontic</string>
    <string name="send_article_successfully">Send Article Successfully</string>
    <string name="send_post_successfully">Send Post Successfully</string>
    <string name="sign_up_successfully">Sign Up Successfully</string>
    <string name="invalid_data">Invalid data .. review your entered data again</string>
    <string name="delete_posts">Delete Posts</string>
    <string name="delete_cards">Delete Cards</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="want_to_delete_Posts">Do you want to delete your posts?</string>
    <string name="want_to_delete_cards">Do you want to delete all cards?</string>
    <string name="delete">Delete</string>
    <string name="delete_info_successfully">You have deleted your data successfully</string>
    <string name="cannot_delete_info">You have no data to delete</string>
    <string name="save_article_successfully">Article saved in your device</string>
    <string name="delete_article">Successfully deleted article</string>
    <string name="have_no_articles">You have no saved articles</string>
    <string name="repeated_user_name">Username is already taken .. try with another user name</string>
    <string name="ai_website_model_url" translatable="false">https://huggingface.co/spaces/OmarEllethy/DENTELLA</string>
</resources>
