<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.updateProfile.editProfile.EditProfileFragment">

    <include
        android:id="@+id/progress_bar"
        layout="@layout/base_progress_bar" />

    <include
        android:id="@+id/back"
        layout="@layout/base_back" />

    <TextView
        android:id="@+id/text_view_edit_or_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:text="@string/edit"
        android:textColor="@color/cyan_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_my_account"
        style="@style/TextViewTopMainScreenStyle"
        android:text="@string/my_account"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_view_profile"
        android:layout_width="148dp"
        android:layout_height="152dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_my_account" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_view_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_user_name"
                style="@style/TextViewUpdateProfileStyle"
                android:text="@string/user_name"
                app:layout_constraintBottom_toTopOf="@id/edit_text_name"
                app:layout_constraintStart_toStartOf="@id/edit_text_name" />

            <EditText
                android:id="@+id/edit_text_name"
                style="@style/EditTextUpdateProfile"
                android:layout_marginTop="25dp"
                android:hint="@string/write_user_name"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_view_mobile_number"
                style="@style/TextViewUpdateProfileStyle"
                android:text="@string/phone"
                app:layout_constraintBottom_toTopOf="@id/edit_text_mobile_number"
                app:layout_constraintStart_toStartOf="@id/edit_text_mobile_number" />

            <EditText
                android:id="@+id/edit_text_mobile_number"
                style="@style/EditTextUpdateProfile"
                android:hint="@string/write_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/edit_text_name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_view_email"
                style="@style/TextViewUpdateProfileStyle"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@id/edit_text_email"
                app:layout_constraintStart_toStartOf="@id/edit_text_email" />

            <EditText
                android:id="@+id/edit_text_email"
                style="@style/EditTextUpdateProfile"
                android:hint="@string/write_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/edit_text_mobile_number"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/edit_text_update_password"
                style="@style/EditTextUpdateProfile"
                android:layout_marginTop="18dp"
                android:clickable="true"
                android:drawableEnd="@drawable/arrow_to_update_password"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/password"
                android:inputType="none"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/edit_text_email"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_view_current_university"
                style="@style/TextViewUpdateProfileStyle"
                android:text="@string/location"
                app:layout_constraintBottom_toTopOf="@id/edit_text_current_university"
                app:layout_constraintStart_toStartOf="@id/edit_text_current_university" />

            <EditText
                android:id="@+id/edit_text_current_university"
                style="@style/EditTextUpdateProfile"
                android:hint="@string/write_university"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/edit_text_update_password"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_view_bio"
                style="@style/TextViewUpdateProfileStyle"
                android:text="@string/about_setting"
                app:layout_constraintBottom_toTopOf="@id/edit_text_bio"
                app:layout_constraintStart_toStartOf="@id/edit_text_bio" />

            <EditText
                android:id="@+id/edit_text_bio"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_profile_style"
                android:gravity="top|start"
                android:hint="@string/about_setting"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_current_university" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>