<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.doctorauth.CreateAccountFragment">

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/changePassword"
        app:layout_constraintEnd_toEndOf="@id/changePassword"
        app:layout_constraintTop_toBottomOf="@id/changePassword"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/full_name"
        android:background="@drawable/edittext_border"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/id_number"
        android:background="@drawable/edittext_border"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/phone"
        android:background="@drawable/edittext_border"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        android:background="@drawable/edittext_border"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        android:text="@string/already_have_account"
        android:textStyle="bold"
        android:layout_marginEnd="45dp"/>

    <TextView
        android:id="@+id/signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/haveAccount"
        app:layout_constraintTop_toTopOf="@id/haveAccount"
        app:layout_constraintBottom_toBottomOf="@id/haveAccount"
        android:text="@string/sign_in"
        android:layout_marginStart="2dp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp" />

    <Button
        android:id="@+id/signInGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or"
        android:layout_marginHorizontal="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/signin_with_google"
        android:textColor="@color/black"
        />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/or"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintEnd_toStartOf="@id/or"
        app:layout_constraintStart_toStartOf="@id/signUp"
        />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/or"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintStart_toEndOf="@id/or"
        app:layout_constraintEnd_toEndOf="@id/signUp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>