<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.doctorauth.LoginAccountFragment">

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@id/changePassword"
        app:layout_constraintStart_toStartOf="@id/changePassword"
        app:layout_constraintTop_toBottomOf="@id/changePassword" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_auth2_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_auth2_style"
            android:inputType="textPassword"
            android:padding="10dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forget_your_password"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in"

        android:layout_width="348dp"
        android:layout_height="57dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_auth_style"
        android:backgroundTint="@color/blue"
        android:padding="10dp"

        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/google_sign_in_button"
        android:text="@string/signin_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or" />


    <TextView
        android:id="@+id/doNotHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/don_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInGoogle" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="@+id/doNotHaveAccount"
        app:layout_constraintStart_toEndOf="@+id/doNotHaveAccount"
        app:layout_constraintTop_toTopOf="@+id/doNotHaveAccount" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/or"
        app:layout_constraintEnd_toStartOf="@id/or"
        app:layout_constraintStart_toStartOf="@id/sign_in"
        app:layout_constraintTop_toTopOf="@id/or" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/or"
        app:layout_constraintEnd_toEndOf="@id/sign_in"
        app:layout_constraintStart_toEndOf="@id/or"
        app:layout_constraintTop_toTopOf="@id/or" />

</androidx.constraintlayout.widget.ConstraintLayout>

