<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ForgetPasswordFragment">

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/forgetPassword"
        app:layout_constraintEnd_toEndOf="@id/forgetPassword"
        app:layout_constraintTop_toBottomOf="@id/forgetPassword"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/forgetPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/enterYourEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        app:layout_constraintTop_toBottomOf="@id/forgetPassword2"
        app:layout_constraintStart_toStartOf="@id/forgetPassword2"
        app:layout_constraintEnd_toEndOf="@id/forgetPassword2"
        android:textColor="@color/gray"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterYourEmail"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email"
        android:background="@drawable/edittext_border"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/reset_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:textSize="17sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>